functionality_templates/harbor_func_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-core
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
spec:
  ports:
  - name: http-web
    port: 80
    targetPort: 8080
  selector:
    release: release-name
    app: harbor
    component: core
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-jobservice
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
spec:
  ports:
  - name: http-jobservice
    port: 80
    targetPort: 8080
  selector:
    release: release-name
    app: harbor
    component: jobservice
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-portal
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    release: release-name
    app: harbor
    component: portal
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-registry
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
spec:
  ports:
  - name: http-registry
    port: 5000
  - name: http-controller
    port: 8080
  selector:
    release: release-name
    app: harbor
    component: registry
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-harbor-trivy
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
spec:
  ports:
  - name: http-trivy
    protocol: TCP
    port: 8080
  selector:
    release: release-name
    app: harbor
    component: trivy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-core
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: core
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: core
  template:
    metadata:
      labels:
        release: release-name
        app: harbor
        component: core
      annotations:
        checksum/configmap: b7a0fa44d801b50bf53ee49c865502aae5b63575f6d0726d30cc543edf0288fe
        checksum/secret: 64257afb4d6dda93db282e96cf82311ae9a9745e9d60a0ee7735fd296b6cf7fb
        checksum/secret-jobservice: 68b44742a352ff62eaaf5e8471baba1fe35c6ae0b42356121ec4524d8329f9eb
        container.apparmor.security.beta.kubernetes.io/core: runtime/default
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 120
      containers:
      - name: core
        image: goharbor/harbor-core:v2.8.2
        imagePullPolicy: IfNotPresent
        startupProbe:
          httpGet:
            path: /api/v2.0/ping
            scheme: HTTP
            port: 8080
          failureThreshold: 360
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/v2.0/ping
            scheme: HTTP
            port: 8080
          failureThreshold: 2
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v2.0/ping
            scheme: HTTP
            port: 8080
          failureThreshold: 2
          periodSeconds: 10
        env: []
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/core/app.conf
          subPath: app.conf
        - name: secret-key
          mountPath: /etc/core/key
          subPath: key
        - name: token-service-private-key
          mountPath: /etc/core/private_key.pem
          subPath: tls.key
        - name: ca-download
          mountPath: /etc/core/ca
        - name: psc
          mountPath: /etc/core/token
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          runAsUser: 1001
          runAsGroup: 25000
      volumes:
      - name: config
        configMap:
          name: release-name-harbor-core
          items:
          - key: app.conf
            path: app.conf
      - name: secret-key
        secret:
          secretName: release-name-harbor-core
          items:
          - key: secretKey
            path: key
      - name: token-service-private-key
        secret:
          secretName: release-name-harbor-core
      - name: ca-download
        secret:
          secretName: release-name-harbor-ingress
      - name: psc
        emptyDir: {}
      - name: secret-volume
        secret:
          secretName: my-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-jobservice
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: jobservice
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: jobservice
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: jobservice
      annotations:
        checksum/configmap: 28ba066426d0e1297a44dba34ab832f07c9a8f68a41c06ebca0a2bc91a5baa8e
        checksum/configmap-env: dd68306dcc591dc3777850862b8812c4c763f7195f0e845723536aaf16201106
        checksum/secret: 2214172a3521320b4dcbce21138936531c3a3946bb7f5587f923eb2281b8fa01
        checksum/secret-core: 390c41d900185e0627ef8ab78ba6c5469e14877ee727460d923a72ca86edc9f7
        container.apparmor.security.beta.kubernetes.io/jobservice: runtime/default
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 120
      containers:
      - name: jobservice
        image: goharbor/harbor-jobservice:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v1/stats
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/stats
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        env: []
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jobservice-config
          mountPath: /etc/jobservice/config.yml
          subPath: config.yml
        - name: job-logs
          mountPath: /var/log/jobs
          subPath: null
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
      volumes:
      - name: jobservice-config
        configMap:
          name: release-name-harbor-jobservice
      - name: job-logs
        persistentVolumeClaim:
          claimName: release-name-harbor-jobservice
      - name: secret-volume
        secret:
          secretName: my-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-notary-server
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: notary-server
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: notary-server
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: notary-server
      annotations:
        checksum/secret: 9a829001f2d9189ce7949c1729ab59d6d35f364a473eb55f1f9fe0a32b3a826e
        checksum/secret-core: f28ef05cb8b1494b0aa5a37719e41e631bae480c85d340da631d6bb94c7fc80f
        container.apparmor.security.beta.kubernetes.io/notary-server: runtime/default
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      containers:
      - name: notary-server
        image: goharbor/notary-server-photon:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /_notary_server/health
            scheme: HTTP
            port: 4443
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_notary_server/health
            scheme: HTTP
            port: 4443
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/notary/server-config.postgres.json
          subPath: server.json
        - name: token-service-certificate
          mountPath: /root.crt
          subPath: tls.crt
        - name: signer-certificate
          mountPath: /etc/ssl/notary/ca.crt
          subPath: ca.crt
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
      volumes:
      - name: config
        secret:
          secretName: release-name-harbor-notary-server
      - name: token-service-certificate
        secret:
          secretName: release-name-harbor-core
      - name: signer-certificate
        secret:
          secretName: release-name-harbor-notary-server
      - name: secret-volume
        secret:
          secretName: my-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-notary-signer
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: notary-signer
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: notary-signer
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: notary-signer
      annotations:
        checksum/secret: 55daa7e820e760db6189ddecc70dac549e19957eda6e0866676f9777155936af
        container.apparmor.security.beta.kubernetes.io/notary-signer: runtime/default
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      containers:
      - name: notary-signer
        image: goharbor/notary-signer-photon:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTPS
            port: 7899
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTPS
            port: 7899
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/notary/signer-config.postgres.json
          subPath: signer.json
        - name: signer-certificate
          mountPath: /etc/ssl/notary/tls.crt
          subPath: tls.crt
        - name: signer-certificate
          mountPath: /etc/ssl/notary/tls.key
          subPath: tls.key
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
      volumes:
      - name: config
        secret:
          secretName: release-name-harbor-notary-server
      - name: signer-certificate
        secret:
          secretName: release-name-harbor-notary-server
      - name: secret-volume
        secret:
          secretName: my-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-portal
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: portal
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: portal
  template:
    metadata:
      labels:
        release: release-name
        app: harbor
        component: portal
      annotations:
        checksum/configmap: 9504cc80d53993b51cae2b31aaa200a9dffe216e5590b451fbe8e000386614a6
        container.apparmor.security.beta.kubernetes.io/portal: runtime/default
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      containers:
      - name: portal
        image: goharbor/harbor-portal:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: portal-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
      volumes:
      - name: portal-config
        configMap:
          name: release-name-harbor-portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-harbor-registry
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: registry
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: registry
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: registry
      annotations:
        checksum/configmap: 2b8b6bfbe694200e4b5d32f144d325d7f3101df80dece87db9644d1f1cdd53a4
        checksum/secret: 54ec4085289d80178a86010b397c623ab898f94683612eaa31d8769532cb94a2
        checksum/secret-jobservice: 0114194fdcc9738600cac4503e9967d728022b106776346bbbb2dcafc1a74ec3
        checksum/secret-core: fba8433bae8c8b33e96d5372fd3ac697aa8623f8247f3d2fa2a0131ae4c95101
        container.apparmor.security.beta.kubernetes.io/registry: runtime/default
        container.apparmor.security.beta.kubernetes.io/registryctl: runtime/default
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 120
      containers:
      - name: registry
        image: goharbor/registry-photon:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 5000
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 10
        args:
        - serve
        - /etc/registry/config.yml
        ports:
        - containerPort: 5000
        - containerPort: 5001
        volumeMounts:
        - name: registry-data
          mountPath: /storage
          subPath: null
        - name: registry-htpasswd
          mountPath: /etc/registry/passwd
          subPath: passwd
        - name: registry-config
          mountPath: /etc/registry/config.yml
          subPath: config.yml
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
      - name: registryctl
        image: goharbor/harbor-registryctl:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 10
        env: []
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: registry-data
          mountPath: /storage
          subPath: null
        - name: registry-config
          mountPath: /etc/registry/config.yml
          subPath: config.yml
        - name: registry-config
          mountPath: /etc/registryctl/config.yml
          subPath: ctl-config.yml
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
      volumes:
      - name: registry-htpasswd
        secret:
          secretName: release-name-harbor-registry-htpasswd
          items:
          - key: REGISTRY_HTPASSWD
            path: passwd
      - name: registry-config
        configMap:
          name: release-name-harbor-registry
      - name: registry-data
        persistentVolumeClaim:
          claimName: release-name-harbor-registry
      - name: secret-volume
        secret:
          secretName: my-secret
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-harbor-database
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: database
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  serviceName: release-name-harbor-database
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: database
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: database
      annotations:
        checksum/secret: 62b64303e898fc3b79a590a9908ee1ef028279b055e21cff30dd409ddde1cc7c
        container.apparmor.security.beta.kubernetes.io/database: runtime/default
        container.apparmor.security.beta.kubernetes.io/data-migrator: runtime/default
        container.apparmor.security.beta.kubernetes.io/data-permissions-ensurer: runtime/default
    spec:
      securityContext:
        runAsUser: 25000
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 120
      containers:
      - name: database
        image: goharbor/harbor-db:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /docker-healthcheck.sh
          initialDelaySeconds: 300
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /docker-healthcheck.sh
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 1
        volumeMounts:
        - name: database-data
          mountPath: /var/lib/postgresql/data
          subPath: null
        - name: shm-volume
          mountPath: /dev/shm
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 25000
          runAsNonRoot: true
          runAsGroup: 25000
      volumes:
      - name: shm-volume
        emptyDir:
          medium: Memory
          sizeLimit: 512Mi
  volumeClaimTemplates:
  - metadata:
      name: database-data
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
      annotations: null
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-harbor-redis
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: redis
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  serviceName: release-name-harbor-redis
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: redis
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: redis
      annotations:
        container.apparmor.security.beta.kubernetes.io/redis: runtime/default
    spec:
      securityContext:
        runAsUser: 25000
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsGroup: 25000
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 120
      containers:
      - name: redis
        image: goharbor/redis-photon:v2.8.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 1
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /var/lib/redis
          subPath: null
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsUser: 25000
          runAsNonRoot: true
          runAsGroup: 25000
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
      annotations: null
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-harbor-trivy
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
    component: trivy
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  serviceName: release-name-harbor-trivy
  selector:
    matchLabels:
      release: release-name
      app: harbor
      component: trivy
  template:
    metadata:
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
        component: trivy
      annotations:
        checksum/secret: 989353564056445018af9b778e7ece01a06f16ca7142d02b6dec5c2b58f56c3a
        container.apparmor.security.beta.kubernetes.io/trivy: runtime/default
    spec:
      securityContext:
        runAsUser: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
      - name: trivy
        image: goharbor/trivy-adapter-photon:v2.8.2
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 25000
          runAsGroup: 25000
        ports:
        - name: api-server
          containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /home/scanner/.cache
          subPath: null
          readOnly: false
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /probe/healthy
            port: api-server
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /probe/ready
            port: api-server
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
      volumes:
      - name: secret-volume
        secret:
          secretName: my-secret
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        heritage: Helm
        release: release-name
        chart: harbor
        app: harbor
      annotations: null
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-harbor-ingress
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
  annotations:
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - secretName: release-name-harbor-ingress
    hosts:
    - core.harbor.domain
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-core
            port:
              number: 80
      - path: /service/
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-core
            port:
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-core
            port:
              number: 80
      - path: /chartrepo/
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-core
            port:
              number: 80
      - path: /c/
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-core
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-portal
            port:
              number: 80
    host: core.harbor.domain
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-harbor-ingress-notary
  labels:
    heritage: Helm
    release: release-name
    chart: harbor
    app: harbor
  annotations:
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - secretName: release-name-harbor-ingress
    hosts:
    - notary.harbor.domain
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: release-name-harbor-notary-server
            port:
              number: 4443
    host: notary.harbor.domain
